// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept the style prop 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #D83A2E;
  color: blue;
}

<div
  class="emotion-0"
>
  Error
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #D83A2E;
}

<div
  class="emotion-0"
>
  Error
</div>
`;
